--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -1,3 +1,22 @@
+@import 'colors';
+
+@mixin shadow--button{
+    box-shadow: 11px 13px 4px 1px rgba(0,0,0,0.51);
+}
+
 :root{
-    background-color: red;
+    background-color: $white--300;
+}
+
+h1, h2, h3, p, span, a{
+    font-family: 'Inter', sans-serif;
+    text-decoration: none;
+}
+
+.logo{
+    font-size: 3rem;
+    font-weight: 700;
+    text-shadow: 5px 3px rgba(0, 0, 0, 25%);
+    text-align: center;
+    margin-bottom: 60px;
 }
